--- a/NControl/NControl.nuspec
+++ b/NControl/NControl.nuspec
@@ -38,8 +38,8 @@
      <file src="NControl.WindowsStore/Bin/Release/NControl.dll" target="lib\win81\NControl.dll" />
      
      <!--Xamarin.WINPHONE81-->
-     <file src="NControl.WindowsStore/Bin/Release/NControl.WindowsPhone.dll" target="lib\win81\NControl.WindowsPhone.dll" />
-     <file src="NControl.WindowsStore/Bin/Release/NControl.dll" target="lib\win81\NControl.dll" />
+     <file src="NControl.WindowsPhone/Bin/Release/NControl.WindowsPhone.dll" target="lib\wpa81\NControl.WindowsPhone.dll" />
+     <file src="NControl.WindowsPhone/Bin/Release/NControl.dll" target="lib\wpa\NControl.dll" />
 
     <!--Xamarin.iOSUnified-->
      <file src="NControl.iOS/bin/Release/NControl.iOS.dll" target="lib\Xamarin.iOS10\NControl.iOS.dll" />
